Fix text input focus spacing

--- a/src/styles/TextInput.scss
+++ b/src/styles/TextInput.scss
@@ -7,9 +7,11 @@ input[type=text] {
     padding: 0.4em 0.4em;
     border-radius: $corner-radius;
     box-shadow: $drop-shadow-1;
-    border-bottom: solid 2px transparentize($color: $color-accent, $amount: 0.5);
+    border-bottom: solid 2px transparentize($color: $color-accent, $amount: 0.4);
+    background-color: $color-surface;
 
     &:focus {
         border-bottom: none;
+        margin-bottom: 2px;
     }
 }
